--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<div id="container">
-		<div>
-			<img>
-			<p></p>
+		<div id="modal-container">
+			<div id="modal">
+				<img id="modal-img">
+				<p id="modal-name"></p>
+			</div>	
 		</div>
-		<header id="location">location</header>
+		<header id="location">Location: </header>
 		<img id="player" src="images/player/right/1.png">
 	</div>
 </body>
