--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Catch Em All</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 </head>
 <body>
 	<div id="container">
-		<div id="modal-container">
-			<div id="modal">
-				<img id="modal-img">
-				<p id="modal-name"></p>
+		<div id="modal">
+			<div id="modal-content">
+				<span id="span">&times;</span>
+				<div>
+					<img id="modal-img">
+					<p id="modal-name"></p>
+				</div>
 			</div>	
 		</div>
 		<header id="location">Location: </header>
